--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "description": "A chrome extension to add extra features to https://www.investing.com",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watchAll",
+    "test": "jest --watchAll",
+    "test:once": "jest",
+    "clear:jest": "jest --clearCache",
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack --config webpack.dev.js",
     "watch": "webpack -w --config webpack.dev.js"
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@testing-library/react": "^10.4.7",
     "@types/chrome": "0.0.121",
     "@types/jest": "^26.0.5",
     "@types/react": "^16.9.43",
