--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@testing-library/react": "^10.4.7",
+    "@testing-library/react-hooks": "^3.4.1",
     "@types/chrome": "0.0.121",
     "@types/jest": "^26.0.5",
     "@types/react": "^16.9.43",
