--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "investing-plus",
-  "version": "0.10.1",
+  "version": "0.11.0",
   "description": "A chrome extension to add extra features to https://www.investing.com",
   "scripts": {
     "test": "jest --watchAll",
@@ -36,6 +36,7 @@
     "@types/react-dom": "^16.9.8",
     "babel-jest": "^26.1.0",
     "css-loader": "^3.6.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.1.0",
     "jest-chrome": "^0.6.0",
     "node-sass": "^4.14.1",
